Service & controller updated, application and frontend env variables added